[package]
name = "contentmd"
version = "0.1.0"
edition = "2021"
description = "CLI for browsing and validating content-md formatted web resources"

[[bin]]
name = "contentmd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
scraper = "0.21"
pulldown-cmark = "0.12"
url = "2"
colored = "2"
